--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header">
                 <div class="headerlogo">
-                    Sports-nutrition
+                    Sports Nutrition
                 </div>
                 <div class="headerlogin">
                     <form class="login">
