--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
                 <div class="headerlogo">
                     Sports Nutrition
                 </div>
-                <div class="headerlogin">
-                    <form class="login">
-                        <input class="usrnm" type="text" placeholder="Username" /><br/>
-                        <input class="pswrd" type="password" placeholder="Password" /><br/>
-                        <button type="submit">Login</button>
-                    </form>
+                <div id="loginAndSum">    
+                    <div class="headerlogin">
+                        <form class="login">
+                            <input class="usrnm" type="text" placeholder="Username" /><br/>
+                            <input class="pswrd" type="password" placeholder="Password" /><br/>
+                            <button type="submit">Login</button>
+                        </form>
+                    </div>
+                    <div class="headerproductscountdiv"></div>
+                    <div class="memberlogin">
+                        <button class="logout">Log out</button>
+                    </div>    
                 </div>
-                <div class="headerproductscountdiv"></div>
-                <div class="memberlogin">
-                    <button class="logout">Log out</button>
-                </div>    
             </div>
             
             <div class="meny">
                 <div class="restenMeny"></div>
                 <div class="produktMeny"></div>
-                <div class="mobiproducts">
+                <div class="mobilproducts">
                     <div class="mobilproductsmenu"></div>
                     <div class="mobilProductsSubmenu"></div>
                 </div>
