--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
             <div class="undermeny"></div>
             
             <div class="main"></div>
-
-            <div class="footer1"></div>
             
-            <div class="footer2">
-                <img src='bilder/footer-logos-se.png' class='betalning'/>
+            <div class="footer">
+                <p>Copyright Night X Designs AB</p>
             </div>
         </div>
 
