Slutgiltig css och fix av sumering i varukorgen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     Sports Nutrition
                 </div>
                 <div id="loginAndSum">    
+                    <div class="headerproductscountdiv">Produkter i varukorgen: <a href="#" id="produkterIHeader" onclick='visaCart()'></a></div>
                     <div class="headerlogin">
                         <form class="login">
                             <input class="usrnm" type="text" placeholder="Username" /><br/>
@@ -23,7 +24,6 @@
                             <button type="submit">Login</button>
                         </form>
                     </div>
-                    <div class="headerproductscountdiv"></div>
                     <div class="memberlogin">
                         <button class="logout">Log out</button>
                     </div>    
@@ -45,7 +45,7 @@
             <div class="main"></div>
             
             <div class="footer">
-                <p>Copyright Night X Designs AB</p>
+                <p>Copy right Night X Designs AB</p>
             </div>
         </div>
 
